Link our CSAF publisher

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Hello, this will become a simple ISDuBA website.
 <p>
-It will also serve as ISDuBA's CSAF provider.
+It will also serve as ISDuBA's CSAF provider,
+see <a href="/.well-known/csaf/">/.well-known/csaf/</a>
